syntax.output
状态 28conflicts: 1 shift/reduce
状态 33conflicts: 1 shift/reduce


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | error RC

   27 StmtList: Stmt StmtList
   28         | %empty

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | error RP
   36     | error SEMI

   37 DefList: Def DefList
   38        | %empty

   39 Def: Specifier DecList SEMI
   40    | error SEMI

   41 DecList: Dec
   42        | Dec COMMA DecList

   43 Dec: VarDec
   44    | VarDec ASSIGNOP Exp

   45 Exp: Exp ASSIGNOP Exp
   46    | Exp AND Exp
   47    | Exp OR Exp
   48    | Exp RELOP Exp
   49    | Exp PLUS Exp
   50    | Exp MINUS Exp
   51    | Exp STAR Exp
   52    | Exp DIV Exp
   53    | LP Exp RP
   54    | MINUS Exp
   55    | NOT Exp
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | Exp DOT ID
   60    | ID
   61    | INT
   62    | FLOAT

   63 Args: Exp COMMA Args
   64     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 21 26 35 36 40
INT (258) 18 61
FLOAT (259) 62
ID (260) 14 16 17 19 20 56 57 59 60
SEMI (261) 4 5 7 29 31 36 39 40
COMMA (262) 9 22 42 63
ASSIGNOP (263) 44 45
RELOP (264) 48
PLUS (265) 49
MINUS (266) 50 54
STAR (267) 51
DIV (268) 52
AND (269) 46
OR (270) 47
DOT (271) 59
NOT (272) 55
TYPE (273) 10
LP (274) 19 20 32 33 34 53 56 57
RP (275) 19 20 21 32 33 34 35 53 56 57
LB (276) 18 58
RB (277) 18 58
LC (278) 12 25
RC (279) 12 25 26
STRUCT (280) 12 13
RETURN (281) 31
IF (282) 32 33
ELSE (283) 33
WHILE (284) 34


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
Program (31)
    on left: 1, on right: 0
ExtDefList (32)
    on left: 2 3, on right: 1 2
ExtDef (33)
    on left: 4 5 6 7, on right: 2
ExtDecList (34)
    on left: 8 9, on right: 4 9
Specifier (35)
    on left: 10 11, on right: 4 5 6 24 39
StructSpecifier (36)
    on left: 12 13, on right: 11
OptTag (37)
    on left: 14 15, on right: 12
Tag (38)
    on left: 16, on right: 13
VarDec (39)
    on left: 17 18, on right: 8 9 18 24 43 44
FunDec (40)
    on left: 19 20 21, on right: 6
VarList (41)
    on left: 22 23, on right: 19 22
ParamDec (42)
    on left: 24, on right: 22 23
CompSt (43)
    on left: 25 26, on right: 6 30
StmtList (44)
    on left: 27 28, on right: 25 27
Stmt (45)
    on left: 29 30 31 32 33 34 35 36, on right: 27 32 33 34
DefList (46)
    on left: 37 38, on right: 12 25 37
Def (47)
    on left: 39 40, on right: 37
DecList (48)
    on left: 41 42, on right: 39 42
Dec (49)
    on left: 43 44, on right: 41 42
Exp (50)
    on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62,
    on right: 29 31 32 33 34 44 45 46 47 48 49 50 51 52 53 54 55 58
    59 63 64
Args (51)
    on left: 63 64, on right: 56 63


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  转到状态 11
    Tag     转到状态 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 14
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  转到状态 18
    VarDec      转到状态 19
    FunDec      转到状态 20


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  接受


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   21 FunDec: error . RP

    RP  shift, and go to state 22


State 16

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 17 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  转到状态 29


State 21

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 38 (DefList)

    Specifier        转到状态 31
    StructSpecifier  转到状态 8
    DefList          转到状态 32
    Def              转到状态 33


State 22

   21 FunDec: error RP .

    $default  reduce using rule 21 (FunDec)


State 23

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 34
    STRUCT  shift, and go to state 3

    Specifier        转到状态 35
    StructSpecifier  转到状态 8
    VarList          转到状态 36
    ParamDec         转到状态 37


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  转到状态 39
    VarDec      转到状态 19


State 26

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


State 27

   26 CompSt: error . RC

    RC  shift, and go to state 41


State 28

   25 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 38 (DefList)]
    INT     reduce using rule 38 (DefList)
    FLOAT   reduce using rule 38 (DefList)
    ID      reduce using rule 38 (DefList)
    MINUS   reduce using rule 38 (DefList)
    NOT     reduce using rule 38 (DefList)
    LP      reduce using rule 38 (DefList)
    LC      reduce using rule 38 (DefList)
    RC      reduce using rule 38 (DefList)
    RETURN  reduce using rule 38 (DefList)
    IF      reduce using rule 38 (DefList)
    WHILE   reduce using rule 38 (DefList)

    Specifier        转到状态 31
    StructSpecifier  转到状态 8
    DefList          转到状态 42
    Def              转到状态 33


State 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 30

   40 Def: error . SEMI

    SEMI  shift, and go to state 43


State 31

   39 Def: Specifier . DecList SEMI

    ID  shift, and go to state 38

    VarDec   转到状态 44
    DecList  转到状态 45
    Dec      转到状态 46


State 32

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


State 33

   37 DefList: Def . DefList

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 38 (DefList)]
    INT     reduce using rule 38 (DefList)
    FLOAT   reduce using rule 38 (DefList)
    ID      reduce using rule 38 (DefList)
    MINUS   reduce using rule 38 (DefList)
    NOT     reduce using rule 38 (DefList)
    LP      reduce using rule 38 (DefList)
    LC      reduce using rule 38 (DefList)
    RC      reduce using rule 38 (DefList)
    RETURN  reduce using rule 38 (DefList)
    IF      reduce using rule 38 (DefList)
    WHILE   reduce using rule 38 (DefList)

    Specifier        转到状态 31
    StructSpecifier  转到状态 8
    DefList          转到状态 48
    Def              转到状态 33


State 34

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 35

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  转到状态 49


State 36

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


State 37

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 51

    $default  reduce using rule 23 (VarList)


State 38

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 39

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 40

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


State 41

   26 CompSt: error RC .

    $default  reduce using rule 26 (CompSt)


State 42

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 28
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 28 (StmtList)

    CompSt    转到状态 63
    StmtList  转到状态 64
    Stmt      转到状态 65
    Exp       转到状态 66


State 43

   40 Def: error SEMI .

    $default  reduce using rule 40 (Def)


State 44

   18 VarDec: VarDec . LB INT RB
   43 Dec: VarDec .
   44    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 67
    LB        shift, and go to state 26

    $default  reduce using rule 43 (Dec)


State 45

   39 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 68


State 46

   41 DecList: Dec .
   42        | Dec . COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 41 (DecList)


State 47

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 48

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


State 49

   18 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 24 (ParamDec)


State 50

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 51

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态 35
    StructSpecifier  转到状态 8
    VarList          转到状态 70
    ParamDec         转到状态 37


State 52

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 53

   26 CompSt: error . RC
   35 Stmt: error . RP
   36     | error . SEMI

    SEMI  shift, and go to state 71
    RP    shift, and go to state 72
    RC    shift, and go to state 41


State 54

   61 Exp: INT .

    $default  reduce using rule 61 (Exp)


State 55

   62 Exp: FLOAT .

    $default  reduce using rule 62 (Exp)


State 56

   56 Exp: ID . LP Args RP
   57    | ID . LP RP
   60    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 60 (Exp)


State 57

   54 Exp: MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 74


State 58

   55 Exp: NOT . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 75


State 59

   53 Exp: LP . Exp RP

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 76


State 60

   31 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 77


State 61

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 78


State 62

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 79


State 63

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 64

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 80


State 65

   27 StmtList: Stmt . StmtList

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    ID      shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 28
    RETURN  shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62

    RC  reduce using rule 28 (StmtList)

    CompSt    转到状态 63
    StmtList  转到状态 81
    Stmt      转到状态 65
    Exp       转到状态 66


State 66

   29 Stmt: Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    SEMI      shift, and go to state 82
    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92


State 67

   44 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 93


State 68

   39 Def: Specifier DecList SEMI .

    $default  reduce using rule 39 (Def)


State 69

   42 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   转到状态 44
    DecList  转到状态 94
    Dec      转到状态 46


State 70

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 71

   36 Stmt: error SEMI .

    $default  reduce using rule 36 (Stmt)


State 72

   35 Stmt: error RP .

    $default  reduce using rule 35 (Stmt)


State 73

   56 Exp: ID LP . Args RP
   57    | ID LP . RP

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 95

    Exp   转到状态 96
    Args  转到状态 97


State 74

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   54    | MINUS Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    DOT  shift, and go to state 91
    LB   shift, and go to state 92

    $default  reduce using rule 54 (Exp)


State 75

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   55    | NOT Exp .
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    DOT  shift, and go to state 91
    LB   shift, and go to state 92

    $default  reduce using rule 55 (Exp)


State 76

   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   53    | LP Exp . RP
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    RP        shift, and go to state 98
    LB        shift, and go to state 92


State 77

   31 Stmt: RETURN Exp . SEMI
   45 Exp: Exp . ASSIGNOP Exp
   46    | Exp . AND Exp
   47    | Exp . OR Exp
   48    | Exp . RELOP Exp
   49    | Exp . PLUS Exp
   50    | Exp . MINUS Exp
   51    | Exp . STAR Exp
   52    | Exp . DIV Exp
   58    | Exp . LB Exp RB
   59    | Exp . DOT ID

    SEMI      shift, and go to state 99
    ASSIGNOP  shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90
    DOT       shift, and go to state 91
    LB        shift, and go to state 92


State 78

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 100


State 79

   34 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 101


State 80

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


State 81

   27 StmtList: Stmt StmtList .

    $default  reduce using rule 27 (StmtList)


State 82

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 83

   45 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 102


State 84

   48 Exp: Exp RELOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 103


State 85

   49 Exp: Exp PLUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    ID     shift, and go to state 56
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  转到状态 104


State 86

   50 Exp: Exp MINUS . Exp
